--- a/Data Structure/DataStructure/DataStructure.vcxproj.filters
+++ b/Data Structure/DataStructure/DataStructure.vcxproj.filters
@@ -21,15 +21,15 @@
     <ClCompile Include="DataStructure.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Vector.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Vector.h">
+    <ClInclude Include="container.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="container.h">
+    <ClInclude Include="containerBase.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
