--- a/Data Structure/DataStructure/DataStructure.vcxproj.filters
+++ b/Data Structure/DataStructure/DataStructure.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Vector.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="List.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
