--- a/Data Structure/DataStructure/DataStructure.vcxproj.filters
+++ b/Data Structure/DataStructure/DataStructure.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Stack.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="Tree.hpp">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
