--- a/Network/Windows/WinNetwork.vcxproj.filters
+++ b/Network/Windows/WinNetwork.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="WinNetwork.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="select.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
