--- a/Network/Windows/WinNetwork.vcxproj.filters
+++ b/Network/Windows/WinNetwork.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="select.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="network.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="network.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
