--- a/Network/Windows/WinNetwork.vcxproj.filters
+++ b/Network/Windows/WinNetwork.vcxproj.filters
@@ -24,10 +24,16 @@
     <ClCompile Include="network.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="iocp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="network.h">
       <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="iocp.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
