--- a/Data Structure/DataStructure/DataStructure.vcxproj.filters
+++ b/Data Structure/DataStructure/DataStructure.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Tree.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="SpinLock.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
