--- a/kv_store/kv_store.vcxproj
+++ b/kv_store/kv_store.vcxproj
@@ -77,7 +77,13 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClCompile Include="CMByteArray.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ReactorServer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CMByteArray.h" />
+    <ClInclude Include="ReactorServer.h" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
